--- a/index.html
+++ b/index.html
@@ -8,6 +8,22 @@
     <title>CSS Cleaner</title>
 </head>
 <body>
+    
+    <nav class="main-nav">
+        <ul>
+            <li><a href="#">CSS Cleaner</a></li>
+        </ul>
+    </nav>
+    <div class="container">
+        <div class="main">
+            <h1>CSS Cleaner</h1>
+            <p>Enter your CSS code below and click the Clean button to remove all unnecessary characters.</p>
+            <textarea id="css-code" cols="30" rows="10"></textarea>
+            <button id="clean">Clean</button>
+                <h2>Result</h2>
+                <textarea id="result" cols="30" rows="10"></textarea>
+        </div>
+    
 <script src="script.js"></script>
 </body>
 </html>
