--- a/index.html
+++ b/index.html
@@ -20,10 +20,12 @@
             <p>Enter your CSS code below and click the Clean button to remove all unnecessary characters.</p>
             <textarea id="css-code" cols="30" rows="10"></textarea>
             <button id="clean">Clean</button>
+            <button id="clear">Clear Fields</button>
                 <h2>Result</h2>
                 <textarea id="result" cols="30" rows="10"></textarea>
+                <button id="copy">Copy</button>
         </div>
     
 <script src="script.js"></script>
 </body>
-</html>
+</html>                                                                                                                                                                                                                                                                                                                                                          
